--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+     <!-- Primary Meta Tags -->
 
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Balcado 🎮</title>
+    <meta name="title" content="Balcado 🎮" />
+  <meta name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of gaming™" />
+  <link rel="icon" type="image/png" href="./src/img/balcado2.png" sizes="128x128">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://balcado.github.io" />
+  <meta property="og:title" content="Balcado 🎮" />
+  <meta property="og:description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of gaming™" />
+  <meta property="og:image" content="./src/img/balcado2.png" sizes="128x128" />
 
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://balcado.github.io" />
+  <meta property="twitter:title" content="Balcado 🎮" />
+  <meta property="twitter:description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of gaming™" />
+  <meta property="twitter:image" content="./src/img/balcado2.png" sizes="128x128" />
   <!-- Jquery -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
@@ -24,41 +43,16 @@
 
   <!-- MC Player Counter -->
   <script src="https://cdn.rawgit.com/leonardosnt/mc-player-counter/1.1.0/dist/mc-player-counter.min.js"></script>
- <!-- Place the UnoCSS stylesheet link here -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unocss@0.59.4/uno.css">
-    <!-- Place the UnoCSS module import script here -->
-    <script type="module">
-        import unocss from 'https://cdn.jsdelivr.net/npm/unocss@0.59.4/+esm'
-    </script>
+
   <!-- Theme's Stylesheet -->
   <link rel="stylesheet" href="./src/css/theme.css" />
 
   <!-- Theme JS -->
   <script src="./src/js/smoothscroll.js"></script>
   <script src="./src/js/nav1.js"></script>
-   <!-- Place the UnoCSS stylesheet link here -->
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unocss@0.59.4/uno.css">
-   <!-- Place the UnoCSS module import script here -->
-   <script type="module">
-       import unocss from 'https://cdn.jsdelivr.net/npm/unocss@0.59.4/+esm'
-   </script>
-  <!-- Site Title -->
-  <title>Balcado 🎮</title>
-
-  <!-- Meta Info -->
-  <meta charset="UTF-8">
-  <meta property="og:type" content="website">
-  <meta name="author" content="7TE &amp; Z_Maro">
-  <meta property="og:description" name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of Minecraft.">
-  <meta name="keywords" content="Minecraft, Server, Balcado, Multiplayer">
-  <meta property="og:url" content="https://balcado.github.io" />
-  <meta property="og:image" content="./src/img/balcado.png" />
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" name="title" content="Balcado 🎮" />
-  <meta name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of gaming™" />
-  <link rel="icon" type="image/png" href="./src/img/balcado.png" sizes="128x128">
+  
 </head>
+
 <body>
  <style>
      .loader-wrapper {
@@ -135,7 +129,7 @@
 
   /* url('./src/img/cityscape2.png');  background-position: 50% 10%; background-attachment: fixed; */">
     <div class="navbar-fixed">
-      <nav class="z-depth-0">
+      <nav class="z-depth-5">
         <div class="nav-wrapper">   
             
           <a style="color: white !important;" href="#!" class="brand-logo">BAlcAdo
@@ -163,9 +157,9 @@
       <!-- / Nav -->
 
     <div class="header-content center-align" data-aos="fade">
-      <h1 style="padding-top: 6%;">Welcome to Balcado²</h1>
-      <h5 style="">Welcome to simplicity, where <span style="animation: underline 10s ease-in-out infinite alternate;
-"> fun meets ease.</span> Join us and rediscover the joy of gaming™</h5>
+      <h1 class="prose" style="padding-top: 6%;"><b>Welcome to</b> <span style="font-family: Major Mono Display;">BALCADO  </span> </h1>
+      <h5 style=""><b>Welcome to simplicity, where <span style="animation: underline 10s ease-in-out infinite alternate;
+"> fun meets ease.</span> Join us and rediscover the joy of gaming™</b></h5>
       <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" href="minecraft/"><svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24"><path fill="currentColor" d="M4 2h16a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2m2 4v4h4v2H8v6h2v-2h4v2h2v-6h-2v-2h4V6h-4v4h-4V6z"/></svg></a>
       <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" href="roblox/"><svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24"><path fill="currentColor" d="M18.926 23.998L0 18.892L5.075.002L24 5.108ZM15.348 10.09l-5.282-1.453l-1.414 5.273l5.282 1.453z"/></svg></a>
       <a class="waves-effect waves-light btn-large grey darken-4" style="margin-bottom: 10%; margin-top: 2%;" href="fortnite/"><svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 3h7.5L15 7h-3v3h3v3.5h-3V20l-4 1z"/></svg></a>
@@ -331,8 +325,8 @@
           <div class="row">
             <div class="col s12">
               <blockquote style="margin: 0% 8% 0% 8%;">
-                Hey there, I'm Koru. Maro's lending me a hand to write this because, well, I'm too lazy to do it myself. Anyway, in this server, I'm a dev, tasked with fixing bugs in specific plugins. Once that's sorted, it's straight back to bed for me.
-            </blockquote>
+                        i ran out of ideas
+              </blockquote>
             </div>
           </div>
           <div class="row main">
@@ -357,8 +351,7 @@
             <div class="col s12 center-align">
               <h5>Anes (Nightmaree__)</h5>
             </div>
-            Hey, I'm Anes! Ever since I was a kid, I've always dreamed of being part of a community that's just like me—funny, awesome, and unique. That's why I decided to join Balcado. It's the perfect place for me to find where I belong.
-
+              
           </div>
           <div class="row">
             <div class="col s12">
@@ -387,58 +380,57 @@
   <!-- /Vip -->
 
   <!-- Screenshots -->
-  <div class="screenshots center-align" id="screenshots" name="screenshots" style="  background-color: #10181e; color: #fff;
-">
+ <div class="screenshots center-align" id="screenshots"  name="screenshots" style="background: #10181e; color: #fff;    ">
     <div class="main" data-aos="fade">
       <div class="row">
         <div class="col s12">
-          <h4>Server Screenshots</h4>
+          <h4 style="color: #fff;"><b>Server Screenshots</b></h4>
         </div>
       </div>
       <div class="row">
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/bg-1.png">
+            <img class="responsive-img materialboxed" style="width: 50vw; height: 25vh;" src="./src/img/bg-1.png">
           </div>
         </div>
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/bg-2.png">
+            <img class="responsive-img materialboxed" style="width: 50vw; height: 25vh;" src="./src/img/bg-2.png">
+          </div>
+        </div>
+     <div class="col l3 s6">
+          <div class="card-panel" style="margin: 0; padding: 0;">
+            <img class="responsive-img materialboxed" style="width: 50vw; height: 25vh;" src="./src/img/bg-3.png">
           </div>
         </div>
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/bg-3.png">
+            <img class="responsive-img materialboxed" style="width: 50vw; height: 25vh;" src="./src/img/bg-4.png">
+          </div>
+        </div>
+          <div class="col l3 s6">
+          <div class="card-panel" style="margin: 0; padding: 0;">
+            <img class="responsive-img materialboxed" style="width: 50vw; height: 25vh;" src="./src/img/bg-5.png">
           </div>
         </div>
         <div class="col l3 s6">
           <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/bg-4.png">
+            <img class="responsive-img materialboxed" style="width: 50vw; height: 25vh;" src="./src/img/bg-6.png">
+          </div>
+        </div>
+     <div class="col l3 s6">
+          <div class="card-panel" style="margin: 0; padding: 0;">
+            <img class="responsive-img materialboxed"style="width: 50vw; height: 25vh;" src="./src/img/bg-7.png">
+          </div>
+        </div>
+        <div class="col l3 s6">
+          <div class="card-panel" style="margin: 0; padding: 0;">
+            <img class="responsive-img materialboxed" style="width: 50vw; height: 25vh;" src="./src/img/bg-8.png">
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col l3 s6">
-          <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/bg-5.png">
-          </div>
-        </div>
-        <div class="col l3 s6">
-          <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/bg-6.png">
-          </div>
-        </div>
-        <div class="col l3 s6">
-          <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/bg-7.png">
-          </div>
-        </div>
-        <div class="col l3 s6">
-          <div class="card-panel" style="margin: 0; padding: 0;">
-            <img class="responsive-img materialboxed" src="./src/img/bg-8.png">
-          </div>
-        </div>
-      </div>
+
+
     </div>
   </div>
   <!-- /Screenshots -->
@@ -570,7 +562,6 @@ $.getJSON(url, function(r) {
         });
 
       </script>
-      <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime"></script>
       </div>
 
 </body>
